--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store-devtools": "17.2.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
+    "xlsx": "^0.18.5",
     "zone.js": "0.14.2"
   },
   "devDependencies": {
